hard-gists/2986210/run.log
=== Docker Run Log for 2986210 ===
Started at: Mi 29. Okt 13:23:10 CET 2025

[2025-10-29 13:23:11] START: Running container for 2986210
[2025-10-29 13:23:11] SUCCESS: Container 4c09373969a9d7d247f8fc43188364463b22cc3b200fb5874436e11aec18c4a8 started for 2986210
=== Container logs for 2986210 ===
  File "/snippet.py", line 10
    print s
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2986210 ===
[2025-10-29 13:23:13] INFO: Container 4c09373969a9d7d247f8fc43188364463b22cc3b200fb5874436e11aec18c4a8 has stopped
